--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
      <div class="col-md-4 col-sm-12 col-xs-12">
       <label>Prediction 1</label>
-      <p class="emotion_name"id="result_gesture"></p>
+      <p class="emotion_name"id="result_emotion"></p>
       <p class="emoji"id="result_emoji"></p>
      </div>
       <div class="col-md-4 col-sm-12 col-xs-12">
